- Added new calculator - implemented tests for new  calculator - Warning enum split to JourneyWarningType and TimeWarningType and renamed to WarningType - Deleted obsolete messages for time warnings which were never used